# SmartMeterFM

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
configs/: example_small.toml
configs/interfaces/alliander/: small_relaxed.toml
configs/showcase/: lcl_0421.toml  lcl_0421_01.toml  lcl_0421_02.toml  lcl_0421_reflow.toml  lcl_0421_reflow2.toml  lcl_0507_tariff_acorn.toml  lcl_electricity_flow_monthly.toml  lcl_electricity_flow_monthly_debug.toml  wpuq_flow_small.toml  wpuq_household_flow_monthly.toml  wpuq_pv_flow_monthly.toml  wpuq_pv_flow_small.toml  wpuq_vae.toml
docs/: lcl_0507_tariff_acorn.md  metrics_review.md  reflow_and_posterior_sampling.md
jobs/: eval_wpuq_household.sh  generate_wpuq_household.sh  lcl_eval_0416.sh  lcl_eval_all_0414_01.sh  lcl_eval_samples.sh  lcl_feb_gen_viz.sh  lcl_full_eval_0416.sh  lcl_gen_eval_0414_01_v2.sh  lcl_gen_eval_0416.sh  lcl_gen_eval_0420_01.sh  lcl_gen_eval_0420_hero.sh  lcl_gen_eval_0507.sh  lcl_gen_eval_v3.sh  lcl_generate_samples.sh  lcl_imputation.sh  lcl_imputation_0414_01_v2.sh  lcl_imputation_0416.sh  lcl_imputation_0420_01.sh  lcl_imputation_0420_hero.sh  lcl_imputation_0421_02_nfe227_resample3.sh  lcl_imputation_0421_02_nfe227_resample3_refactor.sh  lcl_imputation_0421_02_nfe500_resample3.sh  lcl_imputation_0421_02_nfe500_resample3_t01.sh  lcl_imputation_0421_02_nfe500_resample3_t02.sh  lcl_imputation_0421_02_nfe500_resample3_t03.sh  lcl_imputation_0421_02_nfe500_resample3_t05.sh  lcl_imputation_0507.sh  lcl_imputation_0507_nfe227_resample3.sh  lcl_plot_0416.sh  lcl_preprocess_csv.sh  lcl_reflow_0421.sh  lcl_sr_0414_01_v2.sh  lcl_sr_0416.sh  lcl_sr_0420_01.sh  lcl_sr_0420_hero.sh  lcl_sr_0507.sh  lcl_super_resolution.sh  lcl_train_0416.sh  lcl_train_0420.sh  lcl_train_0420_01.sh  (+12 more)
scripts/data/: download_lcl.sh
scripts/showcase/: README.md  __init__.py  evaluate_samples.py  generate_reflow_pairs.py  generate_samples.py  imputation_demo.py  plot_generated_samples.py  reflow_distill.py  super_resolution_demo.py  train_flow.py  train_vae_baseline.py  verify_lcl_data.py
src/fm_energy/data_modules/: heat_pump.py  (+3 more)
src/smartmeterfm/: conditions.py
tests/: test_fmsolver.py  test_lcl_csv_preprocess.py  test_month_mask.py
(+86 files in other folders)
