[project]
name = "fm-energy"
version = "0.1.0"
description = "flow matching for energy time series data"
readme = "readme.md"
authors = [
    { name = "Nan", email = "nanlin1997@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "einops>=0.8.0",
    "filelock>=3.17.0",
    "fonttools>=4.55.8",
    "fsspec>=2024.12.0",
    "jinja2>=3.1.5",
    "kiwisolver>=1.4.8",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.0",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=2.1",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.15.1",
    "setuptools>=75.8.0",
    "six>=1.17.0",
    "sympy>=1.13.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "typing-extensions>=4.12.2",
    "h5py >= 3.12",
    "tqdm >= 4.67",
    "flow_matching >= 1.0.10",
    "ema-pytorch==0.7.7",
    "pytorch-lightning>=2.5.0.post0",
    "jaxtyping>=0.2.37",
    "pre-commit>=4.1.0",
    "pip>=24.0",
    "wandb>=0.19.6",
    "mlflow>=2.21.0",
    "easy-ml-config>=1.2.0",
    "widgetsnbextension>=4.0.14",
    "ipywidgets>=8.1.7",
    "litdata>=0.2.47",
    "ipympl>=0.9.7",
    "jupyterlab-widgets>=3.0.15",
]

[project.optional-dependencies]
default = []

[tool.ruff]
line-length = 88  # Same as black
target-version = "py312"
lint.extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.extend-ignore = ["F722", "F821", "E731"]
fix = true

# Ignore files in .gitignore
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["fm_energy"]
force-single-line = false
lines-after-imports = 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "numba==0.61",
    "umap-learn>=0.5.7",
]
